src/objects/n2de__Capping_Pattern__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Default_cap__c</fullName>
        <inlineHelpText>Default cap applied to team members if no cap entry is created for their tag, or they do not have a tag from the selected collection.</inlineHelpText>
        <label>Default cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Tag_collection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Collection of tags to apply team-level caps to.</inlineHelpText>
        <label>Tag collection</label>
        <referenceTo>n2de__Tag_Category__c</referenceTo>
        <relationshipLabel>Capping Patterns</relationshipLabel>
        <relationshipName>Capping_Patterns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Type__c</fullName>
        <inlineHelpText>The method used to control the maximum number of objects that are distributed to members of the team.</inlineHelpText>
        <label>Cap type</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load balanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Capping Pattern</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capping Patterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>